Create user model, setup database, setup express, setup controller, setup validation, setup routes, setup middleware, setup service, create user api, and test user api

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "nodemon /src/main.js"
   },
   "jest": {
     "transform": {
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
