--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.5"
   },
