--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
     "jsonwebtoken": "^9.0.2",
