--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.0.0",
+    "pdf-parse": "^1.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
