--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "google-auth-library": "^9.6.3",
+    "googleapis": "^133.0.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.0.0",
