--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.3.0",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
