--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "nodemon /src/main.js"
+    "start": "nodemon /src/main.js",
+    "postinstall": "prisma generate"
   },
   "jest": {
     "transform": {
